# KinAMP

./: CMakeLists.txt  README.md  armhf-toolchain.cmake  cli_player.cpp  icons.h  music_backend.cpp  music_backend.h  music_player.cpp  radio_cli.cpp
assets/: bluetooth_icon-lr.h  close_icon-lr.h  display_icon-lr.h  folder_add_icon-lr.h  folder_add_icon.h  musiclibrary_icon-lr.h  musiclibrary_icon.h  play_pause_icon-lr.h  playlist_clear_icon-lr.h  playlist_clear_icon.h  radio_icon-lr.h  radio_icon.h  repeat_icon-lr.h  repeat_on_icon-lr.h  shuffle_icon-lr.h  shuffle_on_icon-lr.h  skip_next_icon-lr.h  skip_previous_icon-lr.h  song_add_icon-lr.h  song_add_icon.h  standby_icon-lr.h  standby_icon.h  start_editor.sh  startkinamp.sh  startkinamp_koreader.sh  stations  stop_icon-lr.h  sunny_icon-lr.h  title-lr.h  title.h
assets/booklet/: kinamp.sh
assets/kinamp.koplugin/: _meta.lua  kinamp_backend.lua  kinamp_config.lua  main.lua
assets/kual/: menu.json
mpeg4/: audio.c
